fix options page content margins. AG-24187
Squashed commit of the following:

commit 606601bb8d33ff036a5467dda33a370f531b4884
Merge: 7d2eb4ca 50cd6828
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 21:54:15 2023 +0300

    Merge branch 'master' into fix/AG-24187-options-content-margins

commit 7d2eb4ca41b2620a3271311e3d16211642141af0
Merge: 3c981d8d bfe56d61
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:55:23 2023 +0300

    Merge branch 'master' into fix/AG-24187-options-content-margins

commit 3c981d8d3f408ae84d2f217f503e6282e8ab0ca8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:08:42 2023 +0300

    Revert "update notification styles"

    This reverts commit ac89ea0c5d767873849f3756752fa27b5e4b99a8.

commit 99eb06582ee930153477de77710ee439d5e898c6
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:08:33 2023 +0300

    Revert "fix linter"

    This reverts commit ba4ed1c352b8d43e29eb01743a65b25717cebf0e.

commit 9e0873ca620230c221022562e42c08e90941b47a
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:06:56 2023 +0300

    fix options page content margins

commit ba4ed1c352b8d43e29eb01743a65b25717cebf0e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:48:55 2023 +0300

    fix linter

commit ac89ea0c5d767873849f3756752fa27b5e4b99a8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:39:12 2023 +0300

    update notification styles

--- a/src/options/components/Account/account.pcss
+++ b/src/options/components/Account/account.pcss
@@ -1,4 +1,5 @@
 .account {
+    margin-left: 16px;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
