--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -21,9 +21,9 @@
         display: inline-flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 0 16px;
-        font-size: 2.8rem;
-        line-height: 3.1rem;
+        margin: 0 0 8px 16px;
+        font-size: 32px;
+        line-height: 38px;
 
         &--pointer {
             cursor: pointer;
