--- a/src/options/components/Exclusions/exclusions.pcss
+++ b/src/options/components/Exclusions/exclusions.pcss
@@ -4,6 +4,7 @@
 
         &--info {
             max-width: 430px;
+            margin-left: 16px;
         }
 
         &--link {
@@ -28,10 +29,9 @@
     }
 
     &__search {
-        margin: 30px 0 16px;
+        margin: 38px 0 16px;
         min-width: 470px;
-        width: calc(100% + 15px);
-        transform: translateX(-15px);
+        width: 100%;
     }
 
     &__add-website {
@@ -144,7 +144,7 @@
         padding-right: 15px;
 
         &--dns-server {
-            width: 100%;
+            width: calc(100% + 16px);
             cursor: pointer;
             border: none;
             padding: 16px;
