--- a/src/options/components/Support/BugReporter/bug-report.pcss
+++ b/src/options/components/Support/BugReporter/bug-report.pcss
@@ -1,6 +1,7 @@
 .bug-report {
     width: 575px;
     padding-top: 8px;
+    margin-left: 16px;
     height: 100%;
 
     &__title {
