--- a/src/options/components/Support/support.pcss
+++ b/src/options/components/Support/support.pcss
@@ -5,7 +5,6 @@
         border: none;
         border-radius: 8px;
         width: calc(100% + 32px);
-        transform: translateX(-16px);
         align-items: center;
         cursor: pointer;
         transition: var(--t3) background-color;
@@ -62,4 +61,3 @@
         }
     }
 }
-
